[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="icon" type="Sprite" parent="."]
modulate = Color( 0.898039, 0, 1, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="InteractArea" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource( 2 )
[connection signal="area_entered" from="InteractArea" to="." method="_on_InteractArea_area_entered"]
[connection signal="area_exited" from="InteractArea" to="." method="_on_InteractArea_area_exited"]
